# Makefile prototype

AUTOMAKE_OPTIONS = foreign

includedir = ${prefix}/include/spf2
include_HEADERS	= \
	spf.h \
	spf_dns.h \
	spf_dns_cache.h \
	spf_dns_null.h \
	spf_dns_resolv.h \
	spf_dns_rr.h \
	spf_dns_test.h \
	spf_dns_zone.h \
	spf_lib_version.h \
	spf_log.h \
	spf_record.h \
	spf_request.h \
	spf_response.h \
	spf_server.h

noinst_HEADERS = spf_internal.h spf_dns_internal.h spf_sys_config.h \
		spf_win32_internal.h spf_win32.h spf_dns_windns.h
